<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_messages" />

        <EditText
            android:id="@+id/etMessages"
            android:layout_width="match_parent"
            android:layout_height="399dp"
            android:editable="false"
            android:ems="10"
            android:overScrollMode="ifContentScrolls"
            android:singleLine="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etYourMessage"
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="500" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BtnSendOnClick"
            android:text="@string/btn_send" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|fill"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSettings"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BtnSettingsOnClick"
            android:text="@string/btn_settings" />

        <Button
            android:id="@+id/btnClearHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BtnClearHistoryOnClick"
            android:text="@string/btn_clear_history" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BtnExitOnClick"
            android:text="@string/btn_exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>